tests/golden/parse_errors/struct_missing_value.cd
struct Person { name: string }
print Person { name: };
