tests/golden/parse_errors/struct_missing_value.err
Parse error at 2:22: expected expression
  print Person { name: };
                       ^
Parse error at 2:23: expected expression
  print Person { name: };
                        ^
